paginas de servicios y OUTSOURCING 31/08/2015

--- a/about_us_one.html
+++ b/about_us_one.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="src/css/theme.css">
     <link rel="stylesheet" href="src/css/highlight.css">
     <link rel="stylesheet" href="src/styles/corporate/custom.css">
-
+    <link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css">
     <!-- Scripts -->
     <script src="src/js/jquery.js"></script>
     <script src="src/js/uikit.min.js"></script>
@@ -402,7 +402,7 @@
                         <!--/ Mobile Mini Logo -->
                     </div>
             </nav>
-            <h1 class="page-title" data-uk-scrollspy="{cls:'uk-animation-fade', delay:300}">About Us One</h1>
+            <h1 class="page-title" data-uk-scrollspy="{cls:'uk-animation-fade', delay:300}">OUTSOURCING</h1>
             <!--/Page Title With Background-->
             <!--/Menu-->
         </div>
@@ -415,7 +415,7 @@
             <div class="uk-width-1-1">
                 <div class="uk-panel uk-panel-box uk-container uk-container-center space-bottom parallax modulebox">
                     <h2 class="center border-top-bottom bold" style="  margin-bottom: 30px;">LAS HABILIDADES DE NUESTRO EQUIPO</h2>
-                    <p class="p center uk-width-2-3">encuentre soporte en las categorías de las cuales estamos en la capacidad de proveer personal calificado y con las habilidades necesarios para hacer que su proyecto se concrete exitosamente.</p>
+                    <p class="p center uk-width-2-3">encuentre soporte en las categorías de las cuales estamos en la capacidad de proveer personal calificado y con las habilidades necesarias para hacer que su proyecto se concrete exitosamente.</p>
                     <div style="margin-top:50px;">
                     </div>
                     <!-- END Our team Short Code -->
@@ -435,7 +435,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-lamp icon-dark"></i>
+<i class="ion-social-html5 icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">HTML5</h4>
 
@@ -443,7 +443,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-pencil-1 icon-dark"></i>
+<i class="ion-social-css3 icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">CSS</h4>
 
@@ -451,7 +451,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:300}">
                             <span>
-<i class="icon-lamp icon-code icon-dark"></i>
+<i class="ion-social-javascript icon-code icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">JAVASCRIPT</h4>
 
@@ -459,7 +459,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:300}">
                             <span>
-<i class="icon-truck icon-dark"></i>
+<i class="ion-social-chrome icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">JQUERY</h4>
 
@@ -478,7 +478,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-lamp icon-dark"></i>
+<i class="ion-social-angular icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">ANGULAR JS</h4>
 
@@ -486,7 +486,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-pencil-1 icon-dark"></i>
+<i class="ion-social-nodejs icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">NODE JS</h4>
 
@@ -494,7 +494,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:300}">
                             <span>
-<i class="icon-lamp icon-code icon-dark"></i>
+<i class="ion-social-chrome icon-code icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">PHP</h4>
 
@@ -502,13 +502,14 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:300}">
                             <span>
-<i class="icon-truck icon-dark"></i>
+<i class="ion-social-chrome icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">RUBY ON RAILS</h4>
 
                         </div>
 
                     </div>
+                    <hr>
 
                     <!-- END Icon Boxes Short Code -->
 
@@ -521,7 +522,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-lamp icon-dark"></i>
+<i class="ion-social-android icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">GAMEMAKER</h4>
 
@@ -529,7 +530,7 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-pencil-1 icon-dark"></i>
+<i class="ion-social-wordpress icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">WORDPRESS</h4>
 
@@ -552,6 +553,7 @@
                         </div>
 
                     </div>
+                    <hr>
 
                     <!-- END Icon Boxes Short Code -->
 
@@ -565,23 +567,15 @@
 
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                             <span>
-<i class="icon-lamp icon-dark"></i>
+<i class="ion-bag icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">PRESTASHOP</h4>
 
                         </div>
 
-                        <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
-                            <span>
-<i class="icon-pencil-1 icon-dark"></i>
-</span>
-                            <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">WORDPRESS</h4>
-
-                        </div>
-
                         <div class="uk-width-1-4 iconboxes-1 effect1" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:300}">
                             <span>
-<i class="icon-lamp icon-code icon-dark"></i>
+<i class="ion-bag icon-code icon-dark"></i>
 </span>
                             <h4 class="bold" style="font-size:16px !important;font-weight:700 !important;">SHOPIFY</h4>
 
