--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>DevPro</title>
+    <title>DevPro | Desarrolladores profesionales a su servicio | Páginas web, Aplicaciones, Plataformas virtuales.</title>
 
     <!-- Styles -->
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -30,6 +30,7 @@
     <script src="src/js/components/slideset.js"></script>
     <script src="src/js/components/slideshow.js"></script>
     <script src="src/js/components/slideshow-fx.js"></script>
+    <script src="src/js/angular.min.js"></script>
    <!-- <script src="src/js/jquery.parallax-1.1.3.js"></script>
     <script src="src/js/jquery.localscroll-1.2.7-min.js"></script>
     <script src="src/js/jquery.scrollTo-1.4.2-min.js"></script>-->
