--- a/index.html
+++ b/index.html
@@ -1485,7 +1485,7 @@
             <div class="tm-footer">
 
                 <div class="uk-panel  parallax modulebox" data-speed="2" data-type="background" style="background-image:url()">
-                    <p style="text-align:center;"><img src="images/zeyn_logo.png" alt="Zeyn" style="margin-bottom: -10px;">
+                    <p style="text-align:center;"><img src="images/uploads/2014/09/zeyn_logo_big.png" alt="Zeyn" style="margin-bottom: 10px;" width="180">
                     </p>
                 </div>
             </div>
@@ -1493,18 +1493,16 @@
                 <div class="uk-panel  parallax modulebox">
                     <!--/ Footer CopyRight-->
 
-                        <ul id="social-42" class="social shape-# size-# align-left" class="center" style="text-align:center !important;  margin-bottom: -10px;margin-top: -10px;">
-                            <li><a href="#" target="_blank"><i class="icon-facebook"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-twitter"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-gplus"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-pinterest"></i></a>
-                            </li>
-                        </ul>
+                    <ul id="social-42" class="social shape-# size-# align-left" class="center" style="text-align:center !important;  margin-bottom: -10px;margin-top: -10px;">
+                        <li><a href="#" target="_blank"><i class="icon-facebook"></i></a>
+                        </li>
+                        <li><a href="#" target="_blank"><i class="icon-twitter"></i></a>
+                        </li>
+                        <li><a href="#" target="_blank"><i class="icon-gplus"></i></a>
+                        </li>
+                        <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a>
+                        </li>
+                    </ul>
                 </div>
                 <!--/ Social-->
             </footer>
