--- a/services_page_two.html
+++ b/services_page_two.html
@@ -180,7 +180,7 @@
                                 <h3 style="text-align:center;"><span style="color: #ffffff;text-align:center;font-weight: 400;">El mundo no se detiene y tu competencia tampoco, es hora de innovar</span></h3>
                                 <p style="text-align: center;color: #ffffff;font-weight: 300;padding-right: 250px;padding-left: 250px;line-height: 25px;">encuentra lo que deseas y promueve tu sitio web con diseños innovadores y estrategias de mercadeo digital integrales.
                                 </p>
-                                <p class="center"><a href="index.html"><img src="images/uploads/2014/09/zeyn_logo_big.png" width="125" alt="Zeyn" class="center"></a>
+                                <p class="center"><a href="index.html"><img src="images/uploads/2014/09/zeyn_logo_big.png" width="125" alt="Zeyn" class="center logo-services"></a>
                                 </p>
                             </div>
                         </div>
@@ -833,7 +833,7 @@ Ideal para complementar con las plataformas empresariales ya que agiliza la comu
             <div class="tm-footer">
 
                 <div class="uk-panel  parallax modulebox" data-speed="2" data-type="background" style="background-image:url()">
-                    <p style="text-align:center;"><img src="images/zeyn_logo.png" alt="Zeyn" style="margin-bottom: -10px;">
+                    <p style="text-align:center;"><img src="images/uploads/2014/09/zeyn_logo_big.png" alt="Zeyn" style="margin-bottom: 10px;" width="180">
                     </p>
                 </div>
             </div>
@@ -841,18 +841,16 @@ Ideal para complementar con las plataformas empresariales ya que agiliza la comu
                 <div class="uk-panel  parallax modulebox">
                     <!--/ Footer CopyRight-->
 
-                        <ul id="social-42" class="social shape-# size-# align-left" class="center" style="text-align:center !important;  margin-bottom: -10px;margin-top: -10px;">
-                            <li><a href="#" target="_blank"><i class="icon-facebook"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-twitter"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-gplus"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a>
-                            </li>
-                            <li><a href="#" target="_blank"><i class="icon-pinterest"></i></a>
-                            </li>
-                        </ul>
+                    <ul id="social-42" class="social shape-# size-# align-left" class="center" style="text-align:center !important;  margin-bottom: -10px;margin-top: -10px;">
+                        <li><a href="#" target="_blank"><i class="icon-facebook"></i></a>
+                        </li>
+                        <li><a href="#" target="_blank"><i class="icon-twitter"></i></a>
+                        </li>
+                        <li><a href="#" target="_blank"><i class="icon-gplus"></i></a>
+                        </li>
+                        <li><a href="#" target="_blank"><i class="icon-linkedin"></i></a>
+                        </li>
+                    </ul>
                 </div>
                 <!--/ Social-->
             </footer>
