formulario de contacto y de servicios

--- a/index.html
+++ b/index.html
@@ -29,7 +29,6 @@
     <script src="src/js/components/slideset.js"></script>
     <script src="src/js/components/slideshow.js"></script>
     <script src="src/js/components/slideshow-fx.js"></script>
-    <script src="src/js/custom.js"></script>
     <script src="src/js/angular.min.js"></script>
 
     <!-- favicons link -->
@@ -964,25 +963,25 @@
                         <div class="uk-grid space-bottom center">
                             <div class="uk-width-1-4 imagehover" data-uk-scrollspy="{cls:'uk-animation-slide-left', delay:300}">
                                 <a href="https://play.google.com/store/apps/details?id=com.cgCreativos.MonstersBalloon" target="_blank" class="hvr-float-shadow">
-                                    <img height="200" width="271" src="images/25.jpg" alt="Home 12">
+                                    <img height="200" width="271" src="src/images/8.jpg" alt="Home 12">
                                 </a>
                                 <h5 class="center">MONSTERS BALLOON</h5>
                             </div>
                             <div class="uk-width-1-4 imagehover" data-uk-scrollspy="{cls:'uk-animation-slide-left', delay:300}">
                                 <a href="https://play.google.com/store/apps/details?id=com.linkstaria.puntofarmavirtual" target="_blank" class="hvr-float-shadow">
-                                    <img height="200" width="271" src="images/27.jpg" alt="Home 13">
+                                    <img height="200" width="271" src="src/images/7.jpg" alt="Home 13">
                                 </a>
                                 <h5 class="center"> PUNTO FARMA VIRTUAL </h5>
                             </div>
                             <div class="uk-width-1-4 imagehover" data-uk-scrollspy="{cls:'uk-animation-slide-left', delay:300}">
                                 <a href="https://play.google.com/store/apps/details?id=com.linkstaria.appgente" target="_blank" class="hvr-float-shadow">
-                                    <img height="200" width="271" src="images/29.jpg" alt="Home 14">
+                                    <img height="200" width="271" src="src/images/6.jpg" alt="Home 14">
                                 </a>
                                 <h5 class="center">APP GENTE</h5>
                             </div>
                             <div class="uk-width-1-4 imagehover" data-uk-scrollspy="{cls:'uk-animation-slide-left', delay:300}">
                                 <a href="https://play.google.com/store/apps/details?id=air.com.CGcreativos.Chicken" target="_blank" class="hvr-float-shadow">
-                                    <img height="200" width="271" src="images/31.jpg" alt="Home 15">
+                                    <img height="200" width="271" src="src/images/5.jpg" alt="Home 15">
                                 </a>
                                 <h5 class="center"> CHICKEN </h5>
                             </div>
@@ -1188,7 +1187,7 @@
                         </div>
                         <div class="uk-grid" style="margin-top:30px;">
                             <div class="uk-width-1-3" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:1500}">
-                               <a href="services_page_two.html">
+                               <a href="services_page_two.html#desarrollo">
                                <div class="iconboxes-circle center hover-opacity" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                                 <span>
                                     <i class="ion-social-html5 icon-dark center hover-opacity size-icon"></i>
@@ -1200,7 +1199,7 @@
                                 <!--<h5 style="color:white;text-align:center;">DESARROLLO WEB</h5>-->
                             </div>
                             <div class="uk-width-1-3" data-uk-scrollspy="{cls:'uk-animation-fade',delay:1800}">
-                                <a href="services_page_two.html">
+                                <a href="services_page_two.html#app-mobil">
                                <div class="iconboxes-circle center hover-opacity" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                                 <span>
                                     <i class="ion-iphone icon-dark center hover-opacity size-icon"></i>
@@ -1210,7 +1209,7 @@
                                 <h5 style="color:white;text-align:center;">APP MÓVILES</h5>
                             </div>
                             <div class="uk-width-1-3" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:2100}">
-                               <a href="services_page_two.html">
+                               <a href="services_page_two.html#plataformas">
                                <div class="iconboxes-circle center hover-opacity" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                                 <span>
                                     <i class="ion-monitor icon-dark center hover-opacity size-icon"></i>
@@ -1222,7 +1221,7 @@
                         </div>
                         <div class="uk-grid" style="margin-top:30px;">
                             <div class="uk-width-1-3" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:1500}">
-                                <a href="services_page_two.html">
+                                <a href="services_page_two.html#marketing">
                                <div class="iconboxes-circle center hover-opacity" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                                 <span>
                                     <i class="ion-social-chrome icon-dark center hover-opacity size-icon"></i>
@@ -1232,7 +1231,7 @@
                                 <h5 style="color:white;text-align:center;">MARKETING DIGITAL</h5>
                             </div>
                             <div class="uk-width-1-3" data-uk-scrollspy="{cls:'uk-animation-fade',delay:1800}">
-                                <a href="services_page_two.html">
+                                <a href="services_page_two.html#seo">
                                <div class="iconboxes-circle center hover-opacity" data-uk-scrollspy="{cls:'uk-animation-slide-left',delay:300}">
                                 <span>
                                     <i class="ion-arrow-graph-up-left icon-dark center hover-opacity size-icon"></i>
@@ -1242,7 +1241,7 @@
                                 <h5 style="color:white;text-align:center;">SEO POSICIONAMIENTO EN BUSCADORES</h5>
                             </div>
                             <div class="uk-width-1-3" data-uk-scrollspy="{cls:'uk-animation-slide-right',delay:2100}">
-                                <a href="services_page_two.html"><img src="images/op3.png" alt="TOP NAVIGATION" class="center hover-opacity" width="130" height="130"></a>
+                                <a href="services_page_two.html#hosting"><img src="images/op3.png" alt="TOP NAVIGATION" class="center hover-opacity" width="130" height="130"></a>
                                 <h5 style="color:white;text-align:center;">DOMINIOS Y HOSTING</h5>
                             </div>
                         </div>
@@ -1280,7 +1279,63 @@
                                 <p class="p" style="margin-top:15px; color:#fff;">NOSOTROS ESTAMOS PARA AYUDARLO A ADMINISTRAR SU TRABAJO ....ESTAMOS AQUI....</p>
                             </div>
                             <div class="uk-width-1-2 uk-float-right uk-navbar-nav">
-                               <a class="uk-button skin-light uk-float-right">CONTÁCTENOS</a>
+                    <ul class="content-dropDown" id="content-DropDownHome"> 
+                        <li class="uk-parent" data-uk-dropdown><a class="uk-button skin-light uk-float-right">CONTÁCTENOS</a>
+                            <div class="uk-dropdown uk-dropdown-navbar">
+                                <div class="uk-grid menu_module">
+                                    <div class="uk-width-1-2">
+                                        <h4 class="bold" style="color:white;">Saludanos</h4>
+                                        <p class="p" style="color:white;">Envíanos en el mensaje adjunto tus inquietudes y/o sugerencias, para nosotros es un placer contribuir al desarrollo de tu sitio web.</p>
+                                        <div id="sp_quickcontact246" class="sp_quickcontact">
+                                            <div id="sp_qc_status"></div>
+                                            <form action="JavaScript:void(0);" id="Contacto" class="form-services" method="POST">
+                                                <div class="sp_qc_clr"></div>
+                                                <div class="uk-grid contact_forms">
+                                                    <div class="uk-width-1-2" style="padding-right: 30px;">
+                                                        <span class="your-name">
+                                                <input type="text" name="name" class="name-input"
+                                                id="name"
+                                                onfocus="if (this.value=='Name') this.value='';"
+                                                onblur="if (this.value=='') this.value='Name';"
+                                                value="Nombre"
+                                                required
+                                                />
+                                                </span>
+                                                        <span class="your-email">
+                                                    <input type="text" name="email" id="email"
+                                                    class="email-input"
+                                                    onblur="if (this.value=='') this.value='Email';"
+                                                    value="Email"
+                                                    onfocus="if (this.value=='Email') this.value='';"
+                                                    required
+                                                    /></span>
+                                                        <span class="your-subject">
+                                                        <input type="text" name="subject" class="subject-input"
+                                                        id="subject"
+                                                        onfocus="if (this.value=='Phone') this.value='';"
+                                                        onblur="if (this.value=='') this.value='Phone';"
+                                                        value="N° Telefono"
+                                                        /></span>
+                                                    </div>
+                                                    <div class="uk-width-1-2" style="padding-right: 30px;">
+                                                        <textarea name="message" id="message" class="message-input" onfocus="if (this.value=='Message') this.value='';" onblur="if (this.value=='') this.value='Message';">Mensaje</textarea>
+                                                    </div>
+                                                </div>
+                                                <div class="sp_qc_clr"></div>
+                                                <input id="sp_qc_submit" class="button uk-button uk-button-primary uk-float-right" style="padding: 0 18px;  text-transform: uppercase;" type="submit" value="Send" />
+                                                <div class="sp_qc_clr"></div>
+                                            </form>
+                                        </div>
+                                        <!--/Contact Form-->
+                                    </div>
+                                    <div class="uk-width-1-2">
+                                        <div id="map1" class="google-map" style="height:322px;width:100%"></div>
+                                        <!--/Google Map-->
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
                             </div>
                         </div>
                     </div>
@@ -1531,6 +1586,8 @@
         </div>
 
     </div>
+    <script src="src/js/jquery-1.7.2.min.js"></script>
+    <script src="src/js/custom.js"></script>
 </body>
 
 </html>
