--- a/about_us_one.html
+++ b/about_us_one.html
@@ -168,9 +168,10 @@
 <body>
     <div class="content-menu"><a href="#offcanvas" class="uk-navbar-toggle  menu-hamburger" data-uk-offcanvas=""></a></div>
         
-        <div id="header-block" class="pages pagebg3  wide-header"><img src="images/uploads/2014/09/zeyn_logo_big.png" class="outsourcing-logo">
+        <div id="header-block" class="pages pagebg3  wide-header">
             <!-- Container -->
             <div class="uk-container uk-container-center">
+               <img src="images/uploads/2014/09/zeyn_logo_big.png" class="outsourcing-logo">
                 <!--/Logo-->
                 <nav class="tm-navbar uk-navbar">
                         <!--/Off Canvas Mobile Menu-->
