cambio de imagenes en la pagina  servicios

--- a/services_page_two.html
+++ b/services_page_two.html
@@ -177,7 +177,7 @@
                     <div class="uk-container uk-container-center">
                         <div class="uk-grid" data-uk-scrollspy="{cls:'wpb_right-to-left', delay:300}">
                             <div class="uk-width-1-2">
-                                <img src="images/desarrollo_web-300x237.png" class="center" alt="Food">
+                                <img src="images/desarrollo_web.jpg" class="center height-237" alt="Food">
                             </div>
                             <div class="uk-width-1-2">
                                 <h3 class="light">Desarrollo Web</h3>
@@ -369,7 +369,7 @@
                     </ul>
                             </div>
                             <div class="uk-width-1-2">
-                                <img src="images/aplicaciones.jpg" class="center" alt="Food 2">
+                                <img src="images/aplicaciones.jpg" class="center height-237" alt="Food 2">
                             </div>
                         </div>
                     </div>
@@ -446,7 +446,7 @@ Ideal para complementar con las plataformas empresariales ya que agiliza la comu
                     <div class="uk-container uk-container-center" id="plataformas">
                         <div class="uk-grid" data-uk-scrollspy="{cls:'wpb_right-to-left', delay:300}">
                             <div class="uk-width-1-2">
-                                <img src="images/plataformasempresariales.jpg" class="center" alt="Plataformas Empresariales ">
+                                <img src="images/plataformasempresariales.jpg" class="center height-237" alt="Plataformas Empresariales ">
                             </div>
                             <div class="uk-width-1-2">
                                 <h3 class="light">Plataformas Empresariales.</h3>
@@ -579,7 +579,7 @@ Ideal para complementar con las plataformas empresariales ya que agiliza la comu
                     </ul>
                             </div>
                             <div class="uk-width-1-2">
-                                <img src="images/marketing.jpg" class="center" alt="Food 2">
+                                <img src="images/market.png" class="center height-237" alt="Food 2">
                             </div>
                         </div>
                     </div>
@@ -671,7 +671,7 @@ Ideal para complementar con las plataformas empresariales ya que agiliza la comu
                     <div class="uk-container uk-container-center" >
                         <div class="uk-grid" data-uk-scrollspy="{cls:'wpb_right-to-left', delay:300}">
                             <div class="uk-width-1-2">
-                                <img src="images/seo-300x237.jpg" class="center" alt="Food">
+                                <img src="images/posicionamiento_en_buscadores.png" class="center height-237" alt="Food">
                             </div>
                             <div class="uk-width-1-2">
                                 <h3 class="light">SEO posicionamiento en buscadores.</h3>
@@ -803,7 +803,7 @@ Ideal para complementar con las plataformas empresariales ya que agiliza la comu
                     </ul>
                             </div>
                             <div class="uk-width-1-2">
-                                <img src="images/hosting.png" class="center" alt="Food 2">
+                                <img src="images/hosting.png" class="center height-237" alt="Food 2">
                             </div>
                         </div>
                     </div>
